Add api unit tests and delete functionality
